--- a/print.html
+++ b/print.html
@@ -108,6 +108,18 @@
                 <li class="picvhers">
                     <img src="./prints/29.jpg" width="200" height="200">
                 </li>
+                <li class="picvhers">
+                    <img src="./prints/30.jpg" width="200" height="200">
+                </li>
+                <li class="picvhers">
+                    <img src="./prints/31.jpg" width="200" height="200">
+                </li>
+                <li class="picvhers">
+                    <img src="./prints/32.jpg" width="200" height="200">
+                </li>
+                <li class="picvhers">
+                    <img src="./prints/33.jpg" width="200" height="200">
+                </li>
             </ul>
         </section>
     </div>
