--- a/stic.html
+++ b/stic.html
@@ -69,6 +69,60 @@
                 <li class="picvhers">
                     <img src="./stics/1.7.jpg" width="200" height="200">
                 </li>
+                <li class="picvhers">
+                    <img src="./stics/10.jpg" width="200" height="200">
+                </li>
+                <li class="picvhers">
+                    <img src="./stics/11.jpg" width="200" height="200">
+                </li>
+                <li class="picvhers">
+                    <img src="./stics/12.jpg" width="200" height="200">
+                </li>
+                <li class="picvhers">
+                    <img src="./stics/13.jpg" width="200" height="200">
+                </li>
+                <li class="picvhers">
+                    <img src="./stics/14.jpg" width="200" height="200">
+                </li>
+                <li class="picvhers">
+                    <img src="./stics/15.jpg" width="200" height="200">
+                </li>
+                <li class="picvhers">
+                    <img src="./stics/16.jpg" width="200" height="200">
+                </li>
+                <li class="picvhers">
+                    <img src="./stics/17.jpg" width="200" height="200">
+                </li>
+                <li class="picvhers">
+                    <img src="./stics/18.jpg" width="200" height="200">
+                </li>
+                <li class="picvhers">
+                    <img src="./stics/19.jpg" width="200" height="200">
+                </li>
+                <li class="picvhers">
+                    <img src="./stics/20.jpg" width="200" height="200">
+                </li>
+                <li class="picvhers">
+                    <img src="./stics/21.jpg" width="200" height="200">
+                </li>
+                <li class="picvhers">
+                    <img src="./stics/22.jpg" width="200" height="200">
+                </li>
+                <li class="picvhers">
+                    <img src="./stics/23.jpg" width="200" height="200">
+                </li>
+                <li class="picvhers">
+                    <img src="./stics/24.jpg" width="200" height="200">
+                </li>
+                <li class="picvhers">
+                    <img src="./stics/25.jpg" width="200" height="200">
+                </li>
+                <li class="picvhers">
+                    <img src="./stics/26.jpg" width="200" height="200">
+                </li>
+                <li class="picvhers">
+                    <img src="./stics/27.jpg" width="200" height="200">
+                </li>
             </ul>
         </section>
     </div>
